src/objects/Audit_Log_Question__c.object
<CustomObject>
    <description>BST- Custom Object created for Field history tracking of the Questions Object</description>
    <fields>
        <fullName>BST_FIELD_API_NAME__c</fullName>
        <description>BST-Field stores the API Name of the field</description>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_LABEL__c</fullName>
        <description>BST-Field stores the field label of the record</description>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_NEW_VALUE__c</fullName>
        <description>BST-Field stores the new value of the field in record</description>
        <label>Field New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_OLD_VALUE__c</fullName>
        <description>BST-Field stores the old value of the field in the record</description>
        <label>Field Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_QUESTION__c</fullName>
        <description>Field stores the id of the parent question</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Audit Log Questions</relationshipLabel>
        <relationshipName>Audit_Log_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Audit Log Question</label>
    <nameField>
        <displayFormat>ALQ-{00000}</displayFormat>
        <label>Audit Log Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Log Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>